--- a/qdrant-landing/themes/qdrant/layouts/pricing/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/pricing/list.html
@@ -33,9 +33,9 @@
                     <!-- Sec Title -->
                     <div class="sec-title centered">
                         <h2>Boost <span>Your Business</span> with Qdrant Solutions</h2>
-                        <div class="text"><h4>Choose the right plan for your project. </h4>
+                        <div class="text"><h4>Enhance your product with Similarity Search</h4>
 
-                            <p><small>Build your MVP on an Open Source stack, or run scale-ready products in the cloud. Elevate your product with Similarity Learning.
+                            <p><small>Build your MVP on an Open Source stack, or run scale-ready products in the cloud. Choose the right plan for your project.
                             </small></p>
 
                             <a class="theme-btn btn-style-three mt-4" href="/solutions/">
