--- a/qdrant-landing/themes/qdrant/static/css/main.css
+++ b/qdrant-landing/themes/qdrant/static/css/main.css
@@ -10054,6 +10054,7 @@ article:first-of-type {
 }
 article:first-of-type table {
   font-size: 20px;
+  color: rgb(41, 41, 41);
 }
 article:first-of-type pre {
   position: relative;
@@ -10065,24 +10066,27 @@ article:first-of-type img {
 }
 article:first-of-type ul,
 article:first-of-type ol {
-  margin-top: 1em;
-  margin-bottom: 1em;
+  margin-top: 0.86em;
+  margin-bottom: 1.5em;
 }
 article:first-of-type ul > li {
   list-style: disc;
   margin: 0 0 0 2em;
   position: relative;
   font-size: 20px;
+  color: rgb(41, 41, 41);
+  line-height: 32px;
 }
 article:first-of-type ol > li {
   list-style: decimal;
   margin: 0 0 0 2em;
   position: relative;
   font-size: 20px;
+  color: rgb(41, 41, 41);
+  line-height: 32px;
 }
 article:first-of-type h1, article:first-of-type h2, article:first-of-type h3, article:first-of-type h4, article:first-of-type h5, article:first-of-type h6 {
   margin-bottom: 1rem;
-  font-family: charter, Georgia, Cambria, "Times New Roman", Times, serif;
 }
 article:first-of-type h1 {
   font-size: 2.25rem;
@@ -10103,9 +10107,11 @@ article:first-of-type h6 {
   font-size: 1.25rem;
 }
 article:first-of-type p {
-  line-height: 1.8em;
-  margin-bottom: 0.7rem;
+  line-height: 32px;
+  margin-top: 0.86em;
+  margin-bottom: 1.5em;
   font-size: 20px;
+  color: rgb(41, 41, 41);
 }
 article:first-of-type figure {
   text-align: center;
