--- a/qdrant-landing/themes/qdrant/static/css/article.scss
+++ b/qdrant-landing/themes/qdrant/static/css/article.scss
@@ -55,6 +55,7 @@ article:first-of-type {
   table {
     @extend .table;
     font-size: 20px;
+    color: rgb(41, 41, 41);
   }
 
   pre {
@@ -69,8 +70,8 @@ article:first-of-type {
 
   ul,
   ol {
-    margin-top: 1em;
-    margin-bottom: 1em;
+    margin-top: 0.86em;
+    margin-bottom: 1.5em;
   }
 
   ul > li {
@@ -78,6 +79,8 @@ article:first-of-type {
     margin: 0 0 0 2em;
     position: relative;
     font-size: 20px;
+    color: rgb(41, 41, 41);
+    line-height: 32px;
   }
 
   ol > li {
@@ -85,11 +88,12 @@ article:first-of-type {
     margin: 0 0 0 2em;
     position: relative;
     font-size: 20px;
+    color: rgb(41, 41, 41);
+    line-height: 32px;
   }
 
   h1, h2, h3, h4, h5, h6 {
     margin-bottom: 1rem;
-    font-family: charter, Georgia, Cambria, "Times New Roman", Times, serif;
   }
 
   h1 {
@@ -117,9 +121,11 @@ article:first-of-type {
   }
 
   p {
-    line-height: 1.8em;
-    margin-bottom: 0.7rem;
+    line-height: 32px;
+    margin-top: 0.86em;
+    margin-bottom: 1.5em;
     font-size: 20px;
+    color: rgb(41, 41, 41);
   }
 
   figure {
