fixes for buttons border, added popovers

--- a/qdrant-landing/themes/qdrant/layouts/partials/js.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/js.html
@@ -89,3 +89,13 @@
 </script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <script src="/js/owl.js"></script>
+<script>
+  $(function () {
+    $('[data-toggle="popover"]').popover({
+      container: 'body'
+    });
+    $('.popover-dismiss').popover({
+      trigger: 'focus'
+    });
+  });
+</script>
