--- a/qdrant-landing/themes/qdrant/layouts/pricing/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/pricing/list.html
@@ -83,8 +83,24 @@
                         </div>
                         <a href="/surveys/cloud-request/" class="start-btn theme-btn">Join Cloud Beta</a>
                         <ul class="price-list">
-                            <li>Managed & Monitored by Us</li>
-                            <li>High Availability & Performance</li>
+                            <li>Managed & Monitored by Us
+                                <a class="ml-3" tabindex="0"
+                                   data-container="body" data-toggle="popover" data-placement="right"
+                                   data-trigger="focus" title="Popover title"
+                                   data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.
+                                   C'mon, wet jolly roger. go to east india.">
+                                   <i class="fas fa-info-circle"></i>
+                                </a>
+                            </li>
+                            <li>High Availability & Performance
+                                <a class="ml-3" tabindex="0"
+                                   data-container="body" data-toggle="popover" data-placement="right"
+                                   data-trigger="focus" title="Popover title"
+                                   data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.
+                                   C'mon, wet jolly roger. go to east india.">
+                                   <i class="fas fa-info-circle"></i>
+                                </a>
+                            </li>
                             <li>Turnkey Data Migration</li>
                             <li>Expert Support</li>
                         </ul>
