--- a/qdrant-landing/themes/qdrant/static/css/article.scss
+++ b/qdrant-landing/themes/qdrant/static/css/article.scss
@@ -94,26 +94,27 @@ article:first-of-type {
 
   h1, h2, h3, h4, h5, h6 {
     margin-bottom: 1rem;
+    font-weight: 600;
   }
 
   h1 {
-    font-size: 2.25rem;
+    font-size: 2.45rem;
   }
 
   h2 {
-    font-size: 1.75rem;
+    font-size: 2rem;
   }
 
   h3 {
-    font-size: 1.25rem;
+    font-size: 1.45rem;
   }
 
   h4 {
-    font-size: 1.25rem;
+    font-size: 1.45rem;
   }
 
   h5 {
-    font-size: 1.25rem;
+    font-size: 1.45rem;
   }
 
   h6 {
