add text to tooltips

--- a/qdrant-landing/themes/qdrant/layouts/pricing/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/pricing/list.html
@@ -83,23 +83,8 @@
                         </div>
                         <a href="/surveys/cloud-request/" class="start-btn theme-btn">Join Cloud Beta</a>
                         <ul class="price-list">
-                            <li>Managed & Monitored by Us
-                                <a class="ml-3" tabindex="0"
-                                   data-container="body" data-toggle="popover" data-placement="right"
-                                   data-trigger="focus" title="Popover title"
-                                   data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.
-                                   C'mon, wet jolly roger. go to east india.">
-                                   <i class="fas fa-info-circle"></i>
-                                </a>
-                            </li>
+                            <li>Managed & Monitored by Us</li>
                             <li>High Availability & Performance
-                                <a class="ml-3" tabindex="0"
-                                   data-container="body" data-toggle="popover" data-placement="right"
-                                   data-trigger="focus" title="Popover title"
-                                   data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.
-                                   C'mon, wet jolly roger. go to east india.">
-                                   <i class="fas fa-info-circle"></i>
-                                </a>
                             </li>
                             <li>Turnkey Data Migration</li>
                             <li>Expert Support</li>
@@ -121,9 +106,32 @@
                         </div>
                         <a href="{{ .Site.Params.mailchimp_contact_form }}" class="start-btn theme-btn">Contact sales</a>
                         <ul class="price-list">
-                            <li>Performance & Deployment Consulting</li>
-                            <li>Neural Network Encoder Fine-Tuning</li>
-                            <li>Migration and Monitoring Tools</li>
+                            <li>Performance & Deployment Consulting
+                                <a class="ml-3" tabindex="0"
+                                data-container="body" data-toggle="popover" data-placement="right"
+                                data-trigger="focus" title="Performance & Deployment"
+                                data-content="We'll design a fault tolerant architecture that provides maximum performance for search and online updates.">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                            </li>
+                            <li>
+                                Neural Network Encoder Fine-Tuning
+                                <a class="ml-3" tabindex="0"
+                                data-container="body" data-toggle="popover" data-placement="right"
+                                data-trigger="focus" title="Fine-Tuning"
+                                data-content="We will analyze your data and offer improvements to your model training process. Or even train the model for you.">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                            </li>
+                            <li>
+                                Migration and Monitoring Tools
+                                <a class="ml-3" tabindex="0"
+                                data-container="body" data-toggle="popover" data-placement="right"
+                                data-trigger="focus" title="Migration and Monitoring"
+                                data-content="Ensure zero-downtime for model and service updates. Set up advanced performance monitoring.">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                            </li>
                             <li>Dedicated Support</li>
                         </ul>
                     </div>
