WIP Cloud prices page (#43)
* cloud prices page

* added link on the cloud page to main menu

* Cloud form with steps (#46)

* for with several steps, in progress

* form with steps - some template and styles

* rearranged scss

* some styles

* more styles

* sliding to invalid input on submit

* connected netlify

* debug

* fixes

* fixes

* fix

* a button leading to the form with steps

* changed questions

* renamed a directory with the cloud form to Surveys to make it reusable

* added more variant to the use-case questions, added terms checkbox

* cloud button in the header (#52)

* update items

* upd pricing page

* cloud -> pricing

* pricing content

* fixes for buttons border, added popovers

* bg size

* upd subtitles

* add text to tooltips

Co-authored-by: Andrey Vasnetsov <andrey@vasnetsov.com>

--- a/qdrant-landing/themes/qdrant/layouts/partials/header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/header.html
@@ -101,7 +101,7 @@
                             
                             {{ $currentPage := . }}
                             {{ range .Site.Menus.main }}
-                            {{ if ne .Identifier "company" }}
+                            {{ if .Params.in_header }}
                             <li class="navigation__item {{if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }}current{{end}}
                               {{if .HasChildren }}dropdown{{ end }}">
                               <a class="navigation__link" {{if not .HasChildren }}href="{{ .URL }}"{{end}}>{{ .Name }}
@@ -126,9 +126,10 @@
                            {{ end }}
 
                            <li>
-                               <a class="btn btn_in-header" href="{{ .Site.Params.github }}" target="_blank" title="github" role="button">
+                               <a class="btn btn_in-header mr-3" href="/surveys/cloud-request/" title="Cloud" role="button">
+                                   <span class="btn btn__text"><i class="fas fa-cloud"></i> Cloud</span></a>
+                               <a class="btn btn_in-header" href="{{ .Site.Params.github }}" target="_blank" title="GitHub" role="button">
                                    <span class="btn btn__text"><i class="icon flaticon-github"></i> Github</span></a>
-
                            </li>
 
                           </ul>
