--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -61,6 +61,7 @@
 @import "blocks/hero-code";
 @import "blocks/widget-header";
 @import "blocks/post-preview";
+@import "blocks/steps-form";
 
 @import "blocks/footer";
 
@@ -195,15 +196,6 @@ img{
 	max-width:100%;
 }
 
-.theme-btn{
-	display:inline-block;
-	transition:all 0.3s ease;
-	-moz-transition:all 0.3s ease;
-	-webkit-transition:all 0.3s ease;
-	-ms-transition:all 0.3s ease;
-	-o-transition:all 0.3s ease;
-}
-
 .centered{
 	text-align:center;	
 }
@@ -235,319 +227,6 @@ img{
 	color:#2196f3;
 	font-size:20px;
 	font-family: "Flaticon";
-}
-
-/* Btn Style One */
-
-.btn-style-one{
-	position: relative;
-	display: inline-block;
-	font-size: 18px;
-	line-height: 30px;
-	color: #ffffff;
-	padding: 10px 44px 10px;
-	font-weight: 400;
-	overflow: hidden;
-	background: none;
-	border-radius:50px;
-	background-color:var(--brand-primary);
-	border:1px solid var(--brand-primary);
-	text-transform: capitalize;
-	font-family: 'Roboto Condensed';
-	box-shadow:0px 5px 10px rgba(0,0,0,0.10);
-}
-
-.btn-style-one .txt{
-	position:relative;
-	z-index:1;
-}
-
-.btn-style-one:before{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    opacity: 0;
-    background-color: #ffffff;
-    -webkit-transition: all 0.4s;
-    -moz-transition: all 0.4s;
-    -o-transition: all 0.4s;
-    transition: all 0.4s;
-    -webkit-transform: scale(1, 0.5);
-    transform: scale(1, 0.5);
-}
-
-.btn-style-one:hover::before{
-    opacity: 1;
-    -webkit-transform: scale(1, 1);
-    transform: scale(1, 1);
-}
-
-.btn-style-one:hover{
-	color: var(--brand-primary);
-	border-color:#ffffff;
-}
-
-/* Btn Style Two */
-
-.btn-style-two{
-	position: relative;
-	display: inline-block;
-	font-size: 18px;
-	line-height: 30px;
-	color: #ffffff;
-	padding: 10px 44px 10px;
-	font-weight: 400;
-	overflow: hidden;
-	background: none;
-	border-radius:50px;
-	background:none;
-	border:1px solid #ffffff;
-	text-transform: capitalize;
-	font-family: 'Roboto Condensed' ;
-}
-
-.btn-style-two:before{
-	position: absolute;
-	left: 0;
-	top: 0;
-	height: 100%;
-	width: 100%;
-	content: "";
-	background-color: var(--brand-primary);
-	-webkit-transform: scale(0, 1);
-	-ms-transform: scale(0, 1);
-	transform: scale(0, 1);
-	-webkit-transform-origin: top right;
-	-ms-transform-origin: top right;
-	transform-origin: top right;
-    -webkit-transition: transform 500ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -moz-transition: transform 500ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -o-transition: transform 500ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    transition: transform 500ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -webkit-transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -moz-transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -o-transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
-}
-
-.btn-style-two:hover::before{
-	-webkit-transform: scale(1, 1);
-	-ms-transform: scale(1, 1);
-	transform: scale(1, 1);
-	-webkit-transform-origin: bottom left;
-	-ms-transform-origin: bottom left;
-	transform-origin: bottom left;
-}
-
-.btn-style-two .txt{
-	position:relative;
-	z-index:1;
-}
-
-.btn-style-two:hover{
-	color:#ffffff;
-	border-color:var(--brand-primary);
-	-webkit-box-shadow: 0 10px 30px rgba(0,0,0,0.10);
-	-moz-box-shadow: 0 10px 30px rgba(0,0,0,0.10);
-	-ms-box-shadow: 0 10px 30px rgba(0,0,0,0.10);
-	-o-box-shadow: 0 10px 30px rgba(0,0,0,0.10);
-	box-shadow: 0 10px 30px rgba(0,0,0,0.10);
-}
-
-/* Btn Style Three */
-
-.btn-style-three{
-	position: relative;
-	display: inline-block;
-	font-size: 18px;
-	line-height: 32px;
-	color: #ffffff;
-	padding: 12px 44px 12px;
-	font-weight: 400;
-	overflow: hidden;
-	background: none;
-	border-radius:50px;
-	background-color:var(--brand-primary);
-	text-transform: capitalize;
-	font-family: 'Roboto Condensed' ;
-	-webkit-box-shadow: 0 10px 32px rgba(255,98,98,0.10);
-	-moz-box-shadow: 0 10px 32px rgba(255,98,98,0.10);
-	-ms-box-shadow: 0 10px 32px rgba(255,98,98,0.10);
-	-o-box-shadow: 0 10px 32px rgba(255,98,98,0.10);
-	box-shadow: 0 10px 32px rgba(255,98,98,0.10);
-}
-
-.btn-style-three:before{
-	position: absolute;
-	left: 0;
-	top: 0;
-	height: 100%;
-	width: 100%;
-	content: "";
-	background-color: #2b2b2b;
-	-webkit-transform: scale(0, 1);
-	-ms-transform: scale(0, 1);
-	transform: scale(0, 1);
-	-webkit-transform-origin: top right;
-	-ms-transform-origin: top right;
-	transform-origin: top right;
-    -webkit-transition: transform 500ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -moz-transition: transform 500ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -o-transition: transform 500ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    transition: transform 500ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -webkit-transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -moz-transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -o-transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
-}
-
-.btn-style-three:hover::before{
-	-webkit-transform: scale(1, 1);
-	-ms-transform: scale(1, 1);
-	transform: scale(1, 1);
-	-webkit-transform-origin: bottom left;
-	-ms-transform-origin: bottom left;
-	transform-origin: bottom left;
-}
-
-.btn-style-three .txt{
-	position:relative;
-	z-index:1;
-}
-
-.btn-style-three:hover{
-	color:#ffffff;
-}
-
-/* Btn Style Four */
-
-.btn-style-four{
-	position: relative;
-	display: inline-block;
-	font-size: 18px;
-	line-height: 30px;
-	color: #ffffff;
-	padding: 10px 48px 10px;
-	font-weight: 400;
-	overflow: hidden;
-	background: none;
-	border-radius:0px;
-  background-color: var(--brand-secondary);
-	text-transform: capitalize;
-	font-family: 'Roboto Condensed' ;
-	-webkit-box-shadow: 0 10px 30px rgba(255,98,98,0.10);
-	-moz-box-shadow: 0 10px 30px rgba(255,98,98,0.10);
-	-ms-box-shadow: 0 10px 30px rgba(255,98,98,0.10);
-	-o-box-shadow: 0 10px 30px rgba(255,98,98,0.10);
-	box-shadow: 0 10px 30px rgba(255,98,98,0.10);
-}
-
-.btn-style-four:before{
-	position: absolute;
-	left: 0;
-	top: 0;
-	height: 100%;
-	width: 100%;
-	content: "";
-  background-color:var(--brand-primary);
-	-webkit-transform: scale(0, 1);
-	-ms-transform: scale(0, 1);
-	transform: scale(0, 1);
-	-webkit-transform-origin: top right;
-	-ms-transform-origin: top right;
-	transform-origin: top right;
-    -webkit-transition: transform 500ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -moz-transition: transform 500ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -o-transition: transform 500ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    transition: transform 500ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -webkit-transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -moz-transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -o-transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
-}
-
-.btn-style-four:hover::before{
-	-webkit-transform: scale(1, 1);
-	-ms-transform: scale(1, 1);
-	transform: scale(1, 1);
-	-webkit-transform-origin: bottom left;
-	-ms-transform-origin: bottom left;
-	transform-origin: bottom left;
-}
-
-.btn-style-four .txt{
-	position:relative;
-	z-index:1;
-}
-
-.btn-style-four:hover{
-	color:#ffffff;
-}
-
-/* Btn Style Five */
-
-.btn-style-five{
-	position: relative;
-	display: inline-block;
-	font-size: 18px;
-	line-height: 30px;
-	color: var(--brand-primary);
-	font-weight: 400;
-	overflow: hidden;
-	background: none;
-	background:none;
-	border-radius:50px;
-	padding: 9px 44px 9px;
-	border:1px solid var(--brand-primary);
-	text-transform: capitalize;
-	font-family: 'Roboto Condensed' ;
-}
-
-.btn-style-five:before{
-	position: absolute;
-	left: 0;
-	top: 0;
-	height: 100%;
-	width: 100%;
-	content: "";
-	background-color: var(--brand-primary);
-	-webkit-transform: scale(0, 1);
-	-ms-transform: scale(0, 1);
-	transform: scale(0, 1);
-	-webkit-transform-origin: top right;
-	-ms-transform-origin: top right;
-	transform-origin: top right;
-    -webkit-transition: transform 500ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -moz-transition: transform 500ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -o-transition: transform 500ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    transition: transform 500ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -webkit-transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -moz-transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    -o-transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
-    transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
-}
-
-.btn-style-five:hover::before{
-	-webkit-transform: scale(1, 1);
-	-ms-transform: scale(1, 1);
-	transform: scale(1, 1);
-	-webkit-transform-origin: bottom left;
-	-ms-transform-origin: bottom left;
-	transform-origin: bottom left;
-}
-
-.btn-style-five .txt{
-	position:relative;
-	z-index:1;
-}
-
-.btn-style-five:hover{
-	color:#ffffff;
-	border-color:var(--brand-primary);
 }
 
 
@@ -4011,7 +3690,7 @@ img{
 	height:981px;
   background-position:right top;
 	background-repeat:no-repeat;
-  background-size: 70%;
+  background-size: 73%;
 }
 
 .banner-section-two .content-column{
@@ -5540,7 +5219,11 @@ img{
 
 .price-page-section{
 	position:relative;
-	padding:95px 0px 0px;
+	padding: 30px 0 0 0;
+
+	@include media-breakpoint-up(lg) {
+		padding-top: 140px;
+	}
 }
 
 .price-block{
@@ -5576,7 +5259,7 @@ img{
 .price-block .inner-box .content-box .price-box{
 	position:relative;
 	color:var(--brand-primary);
-	font-size:66px;
+	font-size:36px;
 	font-weight:700;
 	font-family: 'Roboto Condensed' ;
 }
@@ -5609,8 +5292,10 @@ img{
 }
 
 .price-block .inner-box .content-box .start-btn{
+	display: flex;
+	justify-content: center;
 	position:relative;
-	padding:13px 80px;
+	padding:13px 20px;
 	color:var(--brand-primary);
 	font-size:18px;
 	font-weight:400;
