--- a/qdrant-landing/themes/qdrant/static/css/article.scss
+++ b/qdrant-landing/themes/qdrant/static/css/article.scss
@@ -45,6 +45,8 @@ article aside[role="status"]:before {
 
 article:first-of-type {
   padding-top: 18px;
+  font-family: charter, Georgia, Cambria, "Times New Roman", Times, serif;
+  font-size: 20px;
 
   @include media-breakpoint-up(md) {
     padding-top: 38px;
@@ -52,6 +54,11 @@ article:first-of-type {
 
   table {
     @extend .table;
+    font-size: 18px;
+    color: rgb(41, 41, 41);
+    @include media-breakpoint-up(md) {
+      font-size: 20px;
+    }
   }
 
   pre {
@@ -66,40 +73,57 @@ article:first-of-type {
 
   ul,
   ol {
-    margin-top: 1em;
-    margin-bottom: 1em;
+    margin-top: 0.86em;
+    margin-bottom: 1.5em;
   }
 
   ul > li {
     list-style: disc;
     margin: 0 0 0 2em;
     position: relative;
+    font-size: 18px;
+    color: rgb(41, 41, 41);
+    line-height: 32px;
+    @include media-breakpoint-up(md) {
+      font-size: 20px;
+    }
   }
 
   ol > li {
     list-style: decimal;
     margin: 0 0 0 2em;
     position: relative;
+    font-size: 18px;
+    color: rgb(41, 41, 41);
+    line-height: 32px;
+    @include media-breakpoint-up(md) {
+      font-size: 20px;
+    }
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    margin-bottom: 1rem;
+    font-weight: 600;
   }
 
   h1 {
-    font-size: 2.25rem;
+    font-size: 2.45rem;
   }
 
   h2 {
-    font-size: 1.75rem;
+    font-size: 2rem;
   }
 
   h3 {
-    font-size: 1.25rem;
+    font-size: 1.45rem;
   }
 
   h4 {
-    font-size: 1.25rem;
+    font-size: 1.45rem;
   }
 
   h5 {
-    font-size: 1.25rem;
+    font-size: 1.45rem;
   }
 
   h6 {
@@ -107,8 +131,14 @@ article:first-of-type {
   }
 
   p {
-    line-height: 1.8em;
-    margin-bottom: 0.7rem;
+    line-height: 32px;
+    margin-top: 0.86em;
+    margin-bottom: 1.5em;
+    font-size: 18px;
+    color: rgb(41, 41, 41);
+    @include media-breakpoint-up(md) {
+      font-size: 20px;
+    }
   }
 
   figure {
