--- a/qdrant-landing/themes/qdrant/layouts/partials/header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/header.html
@@ -13,9 +13,19 @@
 
         {{ partial "seo_schema" . }}
         
-        <link rel="shortcut icon" href="{{ "images/favicon.ico" | absURL }}" type="image/x-icon">
-        <link rel="icon" href="{{ "images/favicon.ico" | absURL }}" type="image/x-icon">
-        
+
+        <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+        <link rel="manifest" href="/images/site.webmanifest">
+        <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="shortcut icon" href="/images/favicon.ico">
+        <meta name="msapplication-TileColor" content="#2b5797">
+        <meta name="msapplication-config" content="/images/browserconfig.xml">
+        <meta name="theme-color" content="#ffffff">
+
+
+
         {{ partial "css" . }}
         
         {{ hugo.Generator }}
