--- a/qdrant-landing/themes/qdrant/static/css/article.scss
+++ b/qdrant-landing/themes/qdrant/static/css/article.scss
@@ -1,16 +1,16 @@
 article aside[role="alert"],
 article aside[role="status"] {
-  border: 1px solid transparent;
-  position: relative;
-  padding: .75rem 1.25rem .75rem 3rem;
   margin-bottom: 1rem;
+  padding: .75rem 1.25rem .75rem 3rem;
+  position: relative;
+  border: 1px solid transparent;
   border-radius: 0.25rem;
 }
 
 article aside[role="alert"] {
   color: var(--brand-primary);
-  background-color: #FBBFBF;
   border-color: #fdb8b8;
+  background-color: #FBBFBF;
 }
 
 article aside[role="alert"]:before,
@@ -19,46 +19,34 @@ article aside[role="status"]:before {
   position: absolute;
   top: calc(50% - 0.75rem);
   left: 0;
-  font-size: 1rem;
   text-align: center;
+  font-size: 1rem;
 }
 
 article aside[role="alert"]:before {
   content: "\f071";
   font-family: "Font Awesome 5 Free";
-  font-weight: 900;
   font-size: 1rem;
+  font-weight: 900;
 }
 
 article aside[role="status"] {
   color: var(--brand-secondary);
-  background-color: #d1ecf1;
   border-color: #bee5eb;
+  background-color: #d1ecf1;
 }
 
 article aside[role="status"]:before {
   content: "\f129";
   font-family: "Font Awesome 5 Free";
-  font-weight: 900;
   font-size: 1rem;
+  font-weight: 900;
 }
 
 article:first-of-type {
-  padding-top: 18px;
-  font-family: charter, Georgia, Cambria, "Times New Roman", Times, serif;
-  font-size: 20px;
-
-  @include media-breakpoint-up(md) {
-    padding-top: 38px;
-  }
 
   table {
     @extend .table;
-    font-size: 18px;
-    color: rgb(41, 41, 41);
-    @include media-breakpoint-up(md) {
-      font-size: 20px;
-    }
   }
 
   pre {
@@ -67,8 +55,73 @@ article:first-of-type {
 
   img {
     display: block;
-    margin-left: auto;
     margin-right: auto;
+    margin-left: auto;
+  }
+
+  ul,
+  ol {
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+
+  ul > li {
+    margin: 0 0 0 2em;
+    position: relative;
+    list-style: disc;
+  }
+
+  ol > li {
+    margin: 0 0 0 2em;
+    position: relative;
+    list-style: decimal;
+  }
+
+  h1 {
+    font-size: 2.25rem;
+  }
+
+  h2 {
+    font-size: 1.75rem;
+  }
+
+  h3 {
+    font-size: 1.25rem;
+  }
+
+  h4 {
+    font-size: 1.25rem;
+  }
+
+  h5 {
+    font-size: 1.25rem;
+  }
+
+  h6 {
+    font-size: 1.25rem;
+  }
+
+  p {
+    margin-bottom: 0.7rem;
+    line-height: 1.8em;
+  }
+
+  figure {
+    text-align: center;
+  }
+}
+
+.article,
+.blog {
+  font-family: charter, Georgia, Cambria, "Times New Roman", Times, serif;
+  font-size: 20px;
+
+  table {
+    color: rgb(41, 41, 41);
+    font-size: 18px;
+    @include media-breakpoint-up(md) {
+      font-size: 20px;
+    }
   }
 
   ul,
@@ -78,11 +131,8 @@ article:first-of-type {
   }
 
   ul > li {
-    list-style: disc;
-    margin: 0 0 0 2em;
-    position: relative;
-    font-size: 18px;
     color: rgb(41, 41, 41);
+    font-size: 18px;
     line-height: 32px;
     @include media-breakpoint-up(md) {
       font-size: 20px;
@@ -90,11 +140,8 @@ article:first-of-type {
   }
 
   ol > li {
-    list-style: decimal;
-    margin: 0 0 0 2em;
-    position: relative;
-    font-size: 18px;
     color: rgb(41, 41, 41);
+    font-size: 18px;
     line-height: 32px;
     @include media-breakpoint-up(md) {
       font-size: 20px;
@@ -126,23 +173,62 @@ article:first-of-type {
     font-size: 1.45rem;
   }
 
-  h6 {
-    font-size: 1.25rem;
-  }
-
   p {
-    line-height: 32px;
-    margin-top: 0.86em;
-    margin-bottom: 1.5em;
-    font-size: 18px;
     color: rgb(41, 41, 41);
+    font-size: 18px;
+    line-height: 32px;
     @include media-breakpoint-up(md) {
       font-size: 20px;
     }
   }
+}
 
-  figure {
-    text-align: center;
+.article {
+  padding-right: 180px;
+  padding-left: 180px;
+  padding-top: 18px;
+
+  @media only screen and (max-width: 599px) {
+    padding-right: 0;
+    padding-left: 0;
   }
 
+  @media only screen and (max-width: 1023px) {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+
+  @include media-breakpoint-up(md) {
+    padding-top: 38px;
+  }
+
+  p {
+    margin-top: 0.86em;
+    margin-bottom: 1.5em;
+  }
+}
+
+.blog {
+  padding-right: 70px;
+  padding-left: 70px;
+  padding-top: 20px;
+
+  @media only screen and (max-width: 599px) {
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  @media only screen and (max-width: 1023px) {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+
+  p {
+    margin-top: 0.86em;
+    margin-bottom: 1.5em;
+
+    &:first-child {
+      margin-top: 0;
+    }
+  }
 }
