--- a/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
@@ -9,10 +9,10 @@
       "@type": "Organization",
       "name": "Qdrant",
       "legalName" : "Qdrant Solutions GmbH",
-      "url": "{{ .Permalink }}",
+      "url": "https://qdrant.tech",
       "email": "info@qdrant.com",
-      "@id": "{{ .Permalink }}",
-      "logo": "{{ .Site.BaseURL }}/images/logo_with_text.svg",
+      "@id": "https://qdrant.tech",
+      "logo": "https://qdrant.tech/images/logo_with_text.svg",
       "headline" : "{{ .Title }}",
       "description" : "{{ if .Description }}{{ .Description }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ end }}{{ end }}",
       "keywords" : [ {{ range .Site.Params.Keywords }}"{{ . }}", {{ end }} "Qdrant" ],
