--- a/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
@@ -42,9 +42,9 @@
           "email": "info@qdrant.com"
       },
       "sameAs": [
-          {{ .Site.Params.github }}
-          {{ .Site.Params.twitter }}
-          {{ .Site.Params.linkedin }}
+          {{ .Site.Params.github }},
+          {{ .Site.Params.twitter }},
+          {{ .Site.Params.linkedin }},
           {{ .Site.Params.discord }}
       ],
       "mainEntityOfPage": {
