--- a/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
@@ -5,25 +5,57 @@
 
 <script type="application/ld+json">
   {
-      "@context" : "http://schema.org",
-      "@type" : "WebPage",
-      "mainEntityOfPage": {
-           "@type": "WebPage",
-           "@id": "{{ .Site.BaseURL }}"
-      },
-      "name" : "{{ .Title }}",
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Qdrant",
+      "legalName" : "Qdrant Solutions GmbH",
+      "url": "https://qdrant.tech",
+      "email": "info@qdrant.com",
+      "@id": "https://qdrant.tech",
+      "logo": "https://qdrant.tech/images/logo_with_text.png",
       "headline" : "{{ .Title }}",
-      "description" : "{{ if .Description }}{{ .Description }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ end }}{{ end }}",
-      "inLanguage" : "en-US",
-      "author" : "{{ .Site.Params.Author }}",
-      "accountablePerson" : "{{ .Site.Params.Author }}",
-      "copyrightHolder" : "{{ .Site.Params.Author }}",
-      "copyrightYear" : "{{ .Date.Format "2006" }}",
-      "datePublished": "{{ .Date }}",
-      "dateModified" : "{{ .Date }}",
-      "url" : "{{ .Permalink }}",
-      "wordCount" : "{{ .WordCount }}",
-      "keywords" : [ {{ range .Site.Params.Keywords }}"{{ . }}", {{ end }} "Qdrant" ]
+      "description" : "{{ .Site.Params.description }}",
+      "keywords" : [ {{ range .Site.Params.Keywords }}"{{ . }}", {{ end }} "Qdrant" ],
+      "foundingDate": "2021",
+      "founders": [
+          {
+              "@type": "Person",
+              "name": "{{ .Site.Params.Author }}"
+          }, {
+              "@type": "Person",
+              "name": "Andre Zayarni"
+          }
+      ],
+      "location": "Berlin, Germany",
+      "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Chausseestraße 86",
+          "addressLocality": "Berlin",
+          "addressRegion": "Berlin",
+          "postalCode": "10115",
+          "addressCountry": "DE"
+      },
+      "contactPoint": {
+          "@type": "ContactPoint",
+          "contactType": "customer support",
+          "telephone": "+49 3040797694",
+          "email": "info@qdrant.com"
+      },
+      "sameAs": [
+          {{ .Site.Params.github }},
+          {{ .Site.Params.twitter }},
+          {{ .Site.Params.linkedin }},
+          {{ .Site.Params.discord }}
+      ],
+      "mainEntityOfPage": {
+          "@type": "SoftwareApplication",
+          "name": "Qdrant",
+          "applicationCategory": "Vector Search Engine",
+          "downloadUrl": "https://github.com/qdrant/qdrant",
+          "installUrl": "https://hub.docker.com/r/qdrant/qdrant",
+          "abstract": "{{ .Site.Params.description }}",
+          "image": "https://qdrant.tech/images/logo_with_text.png"
+      }
   }
 </script>
 
