added operation systems to the software application entity in the seo schema

--- a/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
@@ -51,6 +51,7 @@
           "@type": "SoftwareApplication",
           "name": "Qdrant",
           "applicationCategory": "Vector Search Engine",
+          "operatingSystem": "linux, macOS",
           "downloadUrl": "https://github.com/qdrant/qdrant",
           "installUrl": "https://hub.docker.com/r/qdrant/qdrant",
           "abstract": "{{ .Site.Params.description }}",
