--- a/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
@@ -93,5 +93,5 @@
 <meta name="twitter:image" content="{{ .Params.social_preview_image | absURL }}">
 {{ else }}
 <meta name="og:image" content="{{ .Site.Params.preview_image | absURL }}">
-<meta name="twitter:image" content="{{ .Site.Params.preview_image | absURL }}">
+<meta name="twitter:image:src" content="{{ .Site.Params.preview_image | absURL }}">
 {{ end }}
