--- a/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
@@ -89,9 +89,9 @@
 
 <!-- Image -->
 {{ if .Params.social_preview_image }}
-<meta name="og:image" content="{{ .Params.social_preview_image | absURL }}">
+<meta property="og:image" content="{{ .Params.social_preview_image | absURL }}">
 <meta name="twitter:image:src" content="{{ .Params.social_preview_image | absURL }}">
 {{ else }}
-<meta name="og:image" content="{{ .Site.Params.preview_image | absURL }}">
+<meta property="og:image" content="{{ .Site.Params.preview_image | absURL }}">
 <meta name="twitter:image:src" content="{{ .Site.Params.preview_image | absURL }}">
 {{ end }}
