--- a/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
@@ -90,9 +90,17 @@
 <!-- Image -->
 {{ if .Params.social_preview_image }}
 <meta name="image" property="og:image" content="{{ .Params.social_preview_image | absURL }}">
+<meta name="image" property="og:image:secure_url" content="{{ .Params.social_preview_image | absURL }}">
+<meta property="og:image:type" content="image/jpeg" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
 <meta name="twitter:image:src" content="{{ .Params.social_preview_image | absURL }}">
 {{ else }}
 <meta name="image" property="og:image" content="{{ .Site.Params.preview_image | absURL }}">
+<meta name="image" property="og:image:secure_url" content="{{ .Site.Params.preview_image | absURL }}">
+<meta property="og:image:type" content="image/jpeg" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
 <meta name="twitter:image:src" content="{{ .Site.Params.preview_image | absURL }}">
 {{ end }}
 
